# vox-brain-v2

./: .gitignore  README.md  create_symbols_v2_table.sh  create_symbols_v2_table.sql  install.sh  pyproject.toml  uninstall.sh  vox2.py
config/: commands.yaml  storage.yaml
core/: embeddings.py  engine.py  models.py  parser.py  parser_ts.py  storage.py
src/vox_brain_v2/: __init__.py
src/vox_unified/: cli.py  commander.py  datalayer.py  embeddings.py  gatherer.py  manager.py  mcpserver.py  middleware.py  models.py
tests/: test_core.py  test_gatherer.py  test_manager.py  test_parser.py  test_parser_ts.py
