[project]
name = "vox-unified"
version = "0.1.0"
description = "Unified VOX Brain: Hybrid RAG (SQLite + Postgres)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "mcp[cli]>=0.1.0",
    "psycopg[binary]>=3.1.18",
    "pgvector>=0.2.5",
    "ollama>=0.6.1",
    "tree-sitter>=0.21.3",
    "tree-sitter-python>=0.21.0",
    "tree-sitter-typescript>=0.21.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "langchain-text-splitters>=1.1.0",
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "uvicorn>=0.30.0",
    "numpy>=1.26.0",
    "requests>=2.32.0",
    "python-dotenv>=1.0.1",
    "makefun>=1.15.0",
    "aiofiles>=25.1.0",
    "ruff>=0.14.14",
]

[project.scripts]
vox = "vox_unified.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
